# platformer

./: Cargo.toml  README.md  config.toml  manager.sh
client_logic/: Cargo.toml
client_logic/src/: constants.rs  interpolation.rs  lib.rs  network_client.rs  render_clock.rs  runtime.rs  session.rs
client_logic/src/replay/: constants.rs  core.rs  list_view.rs  mod.rs  recorder.rs  viewer.rs
display/: Cargo.toml
display/src/: constants.rs  game_window.rs  input.rs  lib.rs  menus.rs  render.rs  trail.rs  utils.rs
foundation/: Cargo.toml
foundation/src/: color.rs  game_mode.rs  lib.rs  math_helpers.rs  rect.rs
game/: Cargo.toml
game/src/: attack.rs  color.rs  constants.rs  game_state.rs  lib.rs  lobby.rs  map.rs  network.rs  player.rs  read_config.rs  team.rs  trail.rs  utils.rs
game_config/: Cargo.toml
game_config/src/: lib.rs  read.rs  utils.rs
protocol/: Cargo.toml
protocol/src/: constants.rs  init.rs  lib.rs  lobby.rs  net_attack.rs  net_client.rs  net_game_state.rs  net_input.rs  net_player.rs  net_server.rs  net_team.rs  utils.rs
replays/: 2026-05-26-11-33-19.prp
server_logic/: Cargo.toml
server_logic/src/: lib.rs  network_server.rs  runtime.rs
simulation/: Cargo.toml
simulation/src/: attack.rs  constants.rs  game_state.rs  lib.rs  map.rs  player.rs  simulation.rs  team.rs  trail.rs  utils.rs
simulation/src/player/: combat.rs  cooldowns.rs  core.rs  identity.rs  input.rs  mod.rs  physics.rs  status.rs  visuals.rs
src/: attack.rs  config.toml  constants.rs  game_state.rs  input.rs  lib.rs  lobby.rs  main.rs  map.rs  network.rs  player.rs  read_config.rs  rect.rs  team.rs  trail.rs  traits.rs  utils.rs
