[package]
name = "display"
version = "0.1.0"
edition = "2024"

[dependencies]
client_logic = { path = "../client_logic" }
foundation = { path = "../foundation" }
game_config = { path = "../game_config" }
protocol = { path = "../protocol" }
simulation = { path = "../simulation" }
ggez = "0.9.3"
glam = { version = "0.30.9", features = ["mint", "serde"] }
mint = "0.5.9"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
