[package]
name = "platform"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
client_logic = { path = "../client_logic" }
display = { path = "../display" }
game_config = { path = "../game_config" }
foundation = { path = "../foundation" }
simulation = { path = "../simulation" }
protocol = { path = "../protocol" }
server_logic = { path = "../server_logic" }
bincode = { version = "2.0.1", features = ["serde"] }
ggez = "0.9.3"
glam = { version = "0.30.9", features = ["mint", "serde"] }
mint = "0.5.9"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
