[package]
name = "platform"
version = "0.1.0"
edition = "2024"

[dependencies]
client_logic = { path = "../client_logic" }
display = { path = "../display" }
game_config = { path = "../game_config" }
protocol = { path = "../protocol" }
server_logic = { path = "../server_logic" }
simulation = { path = "../simulation" }
anyhow = "1.0.100"
ggez = "0.9.3"
tokio = { version = "1.48.0", features = ["full"] }
