[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
foundation = { path = "../foundation" }
simulation = { path = "../simulation" }
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
