[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
foundation = { path = "../foundation" }
simulation = { path = "../simulation" }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
glam = "0.30.9"
wincode = { version = "0.5.4", features = ["derive"] }
