[package]
name = "server_logic"
version = "0.1.0"
edition = "2024"

[dependencies]
client_logic = { path = "../client_logic" }
protocol = { path = "../protocol" }
simulation = { path = "../simulation" }
anyhow = "1.0.100"
ggez = "0.9.3"
bincode = { version = "2.0.1", features = ["serde"] }
tokio = "1.48.0"
