[package]
name = "server_logic"
version = "0.1.0"
edition = "2024"

[dependencies]
client_logic = { path = "../client_logic" }
foundation = { path = "../foundation" }
protocol = { path = "../protocol" }
simulation = { path = "../simulation" }
anyhow = "1.0.100"
ggez = "0.9.3"
tokio = "1.48.0"
uuid = { version = "1.23.1", features = ["v4"] }
